--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:6.5.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
